Ignore Jetbrain .idea generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /.env
+/.idea/.gitignore
+/.idea/Discord-Bot-Template.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
